[metadata]
name = widgetastic.patternfly4
description = Patternfly4 widget library for Widgetastic
license = Apache license 2.0
url = https://github.com/RedHatQE/widgetastic.patternfly4
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
setup_requires =
    setuptools_scm>=3.0.0
install_requires =
    selenium==3.141.0
    widgetastic.core>=0.61

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit
    pytest
    pytest-cov
    pytest-xdist
    codecov
    tox
doc =
    sphinx
